@@ -14,10 +14,10 @@ index c972b3bc0b..18b5a6ee4f 100644
  # TODO we should fix the long-line errors in yacc/*.c
  /yacc/*.[ch]         typo.very-long-line=may
 diff --git a/Changes b/Changes
-index e90f412e04..889ab63a6b 100644
+index 22b4f02ce6..4ffa55e685 100644
 --- a/Changes
 +++ b/Changes
-@@ -1260,11 +1260,6 @@ OCaml 5.0.0 (15 December 2022)
+@@ -1263,11 +1263,6 @@ OCaml 5.0.0 (15 December 2022)
    (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
     Xavier Leroy)
  
@@ -29,7 +29,7 @@ index e90f412e04..889ab63a6b 100644
  - #11516, #11524: Fix the `deprecated_mutable` attribute.
    (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
  
-@@ -1293,6 +1288,30 @@ OCaml 5.0.0 (15 December 2022)
+@@ -1296,6 +1291,30 @@ OCaml 5.0.0 (15 December 2022)
    (Gabriel Scherer, review by Jacques Garrigue and Florian Angeletti,
     report by Yaron Minsky)
  
@@ -60,7 +60,7 @@ index e90f412e04..889ab63a6b 100644
  OCaml 4.14.0 (28 March 2022)
  ----------------------------
  
-@@ -1328,13 +1347,13 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1331,13 +1350,13 @@ OCaml 4.14.0 (28 March 2022)
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -76,7 +76,7 @@ index e90f412e04..889ab63a6b 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -1441,6 +1460,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1444,6 +1463,9 @@ OCaml 4.14.0 (28 March 2022)
  - #10464: Add List.is_empty.
    (Craig Ferguson, review by David Allsopp)
  
@@ -86,7 +86,7 @@ index e90f412e04..889ab63a6b 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -1704,6 +1726,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1707,6 +1729,9 @@ OCaml 4.14.0 (28 March 2022)
  
  ### Build system:
  
@@ -10086,7 +10086,7 @@ index 0000000000..5c2feef533
 +                 -e 's/\d027\[m/\d027[0m/g' \
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..8f1a1c087b
+index 0000000000..4846443764
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,10023 @@
@@ -10106,10 +10106,10 @@ index 0000000000..8f1a1c087b
 + # TODO we should fix the long-line errors in yacc/*.c
 + /yacc/*.[ch]         typo.very-long-line=may
 +diff --git a/Changes b/Changes
-+index e90f412e04..889ab63a6b 100644
++index 22b4f02ce6..4ffa55e685 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -1260,11 +1260,6 @@ OCaml 5.0.0 (15 December 2022)
++@@ -1263,11 +1263,6 @@ OCaml 5.0.0 (15 December 2022)
 +   (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
 +    Xavier Leroy)
 + 
@@ -10121,7 +10121,7 @@ index 0000000000..8f1a1c087b
 + - #11516, #11524: Fix the `deprecated_mutable` attribute.
 +   (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
 + 
-+@@ -1293,6 +1288,30 @@ OCaml 5.0.0 (15 December 2022)
++@@ -1296,6 +1291,30 @@ OCaml 5.0.0 (15 December 2022)
 +   (Gabriel Scherer, review by Jacques Garrigue and Florian Angeletti,
 +    report by Yaron Minsky)
 + 
@@ -10152,7 +10152,7 @@ index 0000000000..8f1a1c087b
 + OCaml 4.14.0 (28 March 2022)
 + ----------------------------
 + 
-+@@ -1328,13 +1347,13 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1331,13 +1350,13 @@ OCaml 4.14.0 (28 March 2022)
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -10168,7 +10168,7 @@ index 0000000000..8f1a1c087b
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -1441,6 +1460,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1444,6 +1463,9 @@ OCaml 4.14.0 (28 March 2022)
 + - #10464: Add List.is_empty.
 +   (Craig Ferguson, review by David Allsopp)
 + 
@@ -10178,7 +10178,7 @@ index 0000000000..8f1a1c087b
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -1704,6 +1726,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1707,6 +1729,9 @@ OCaml 4.14.0 (28 March 2022)
 + 
 + ### Build system:
 + 
